syntax = "proto3";

option java_package = "com.accelaero.aeroinventory.gen.grpc.proto";


message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateResponse {
  string  firstName = 1;
  string  lastName = 2;
  string  email = 3;
  string  username = 4;
  bool	success = 5;
}


service Authenticator {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
}

